Drop unused jtreg test headers
Drop unused jtreg test headers

Reviewed-by: sundar