@@ -29,14 +29,6 @@ import org.openjdk.jextract.test.TestUtils;
 import org.testng.annotations.Test;
 import static org.testng.Assert.assertNotNull;
 
-/*
- * @test
- * @library /test/lib
- * @build JextractToolRunner
- * @bug 8258223
- * @summary jextract throws exception when unsupport type is used in anonymous struct
- * @run testng/othervm --enable-native-access=ALL-UNNAMED Test8258223
- */
 public class Test8258223 extends JextractToolRunner {
     @Test
     public void test() {
