@@ -28,14 +28,6 @@ import org.testng.annotations.Test;
 import java.nio.file.Path;
 import static org.testng.Assert.assertNotNull;
 
-/*
- * @test
- * @library /test/lib
- * @build JextractToolRunner
- * @bug 8262825
- * @summary jextract crashes when Java type names like String are used as identifiers in C header
- * @run testng/othervm --enable-native-access=ALL-UNNAMED Test8262825
- */
 public class Test8262825 extends JextractToolRunner {
     @Test
     public void test() {
